# Desktop_Widget

./: .gitattributes  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  开发计划.md  项目.md
docs/superpowers/plans/: 2026-06-16-deskhub-desktop-widgets.md  2026-06-16-deskhub-m0-scaffold.md  2026-06-16-deskhub-m1-todo-coins.md  2026-06-16-deskhub-m2-backgrounds.md  2026-06-16-deskhub-m3-finish.md  2026-06-16-deskhub-m3-tray-notify.md  2026-06-16-deskhub-m4-icons.md  2026-06-16-deskhub-m4-widget-rework.md  2026-06-16-deskhub-m5-email.md  2026-06-16-deskhub-m6-game.md  2026-06-16-deskhub-windows-wallpaper.md
docs/superpowers/specs/: 2026-06-16-deskhub-desktop-widgets-design.md  2026-06-16-deskhub-m0-scaffold-design.md  2026-06-16-deskhub-m1-todo-coins-design.md  2026-06-16-deskhub-m2-backgrounds-design.md  2026-06-16-deskhub-m3-finish-design.md  2026-06-16-deskhub-m3-tray-notify-design.md  2026-06-16-deskhub-m4-icons-design.md  (+3 more)
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  error.rs  idle.rs  lib.rs  main.rs  pexels.rs  reminder.rs  tray.rs
src-tauri/src/commands/: apps.rs  autostart.rs  backgrounds.rs  backup.rs  game.rs  kv.rs  mail.rs  mod.rs  todos.rs  widget.rs
src-tauri/src/db/: apps.rs  backgrounds.rs  backup.rs  game.rs  kv.rs  migrations.rs  mod.rs  todos.rs
src-tauri/src/gmail/: api.rs  auth.rs  mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/system/: mod.rs  shortcuts.rs
src-tauri/src/window/: mod.rs
src/routes/: +layout.svelte  +page.svelte
(+17 files in other folders)
